Nth pages commit

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 <script src="js/d3-3-5-5.min.js"></script>
 <script>
 var USER_SEX = '';
-var USER_DEMO = 'eduHS';
+var USER_DEMO = 'origREP';
 
 var margin = {top: 30, right: 20, bottom: 40, left: 30},
     width = 1090 - margin.left - margin.right,
